--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ solution: NeuroLoopGain.sln
 install:
   - nuget restore NeuroLoopGain.sln
 script:
-  - xbuild NeuroLoopGain.sln /p:TargetFrameworkVersion="v4.0" /p:Configuration=Release 
+  - msbuild NeuroLoopGain.sln /p:TargetFrameworkVersion="v4.0" /p:Configuration=Release 
 deploy:
   skip_cleanup: true
   provider: script
